--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -1,2 +1,2 @@
-export TWILIO_ACCOUNT_SID='ACxxxxxxxxxxxxxxx'
-export TWILIO_AUTH_TOKEN='xxxxxxxxxxxxxxxx'
+TWILIO_ACCOUNT_SID='ACxxxxxxxxxxxxxxx'
+TWILIO_AUTH_TOKEN='xxxxxxxxxxxxxxxx'
